# TPR

./: CMakeLists.txt  LICENSE  README.md  REMOVAL.md  docker-compose.yml  entrypoint.sh  frames_2026-03-07_19.02.18.gv  package.xml
a_star_smooth_planner/: a_star_planner.py  a_star_smoother.py  a_star_smoother_copy.py  obstacle_generator.py
config/: amcl.rviz  nav2_bringup_params.yaml
jackal_ar4_ws/: .gitignore  Dockerfile  README.md
jackal_ar4_ws/src/ar4/: .pre-commit-config.yaml  CONTRIBUTING.md
jackal_ar4_ws/src/ar4/.github/: CODEOWNERS
jackal_ar4_ws/src/ar4/.github/workflows/: ci.yml
jackal_ar4_ws/src/ar4/ar4_description/urdf/: ar4.urdf.xacro
jackal_ar4_ws/src/ar4/ar4_description/urdf/gripper/: ar_gripper_macro.xacro
jackal_ar4_ws/src/ar4/ar4_description/urdf/include/: common_macros.urdf.xacro
jackal_ar4_ws/src/ar4/ar4_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
jackal_ar4_ws/src/ar4/ar4_moveit_config/config/: ar4.srdf  ar4.urdf.xacro  moveit.rviz  ros2_controllers.yaml
jackal_ar4_ws/src/ar4/ar4_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
jackal_ar4_ws/src/ar4/docker/: Dockerfile  docker-compose.yml  run.sh
jackal_ar4_ws/src/ar4/docker/files/: dependencies.repos  developer_rc
jackal_ar4_ws/src/ar4/tools/: check_copyright.py
jackal_ar4_ws/src/jackal_ar4_description/: package.xml
jackal_ar4_ws/src/jackal_ar4_description/config/: rviz_config.rviz
jackal_ar4_ws/src/jackal_ar4_description/launch/: jackal_ar4.launch
jackal_ar4_ws/src/jackal_ar4_description/urdf/: ar4_arm.urdf.xacro  jackal_ar4.ros2_control.xacro  jackal_ar4.urdf.xacro
jackal_ar4_ws/src/jackal_ar4_goals/: setup.cfg
jackal_ar4_ws/src/jackal_ar4_goals/jackal_ar4_goals/: send_arm_goal.py
jackal_ar4_ws/src/jackal_ar4_moveit_config/config/: kinematics.yaml  motion_planning.yaml  moveit_controllers.yaml  ros2_controllers.yaml
jackal_ar4_ws/src/jackal_ar4_moveit_config/launch/: moveit.launch.py  rviz.launch.py
jackal_ar4_ws/src/jackal_ar4_navigation/: package.xml
jackal_ar4_ws/src/jackal_ar4_navigation/launch/: navigation.launch.py
jackal_ar4_ws/src/jackal_ar4_navigation/scripts/: ground_truth_odom.py
launch/: nav_test.launch.py
maps/: keepout_mask.pgm  keepout_mask.yaml  room_with_walls.pgm  room_with_walls.yaml  simple_world.pgm  simple_world.yaml
src/: a_star_smoother.cpp  pure_pursuit.cpp
src/ar4/: .clang-format  .flake8  .gitignore
src/ar4/ar4_moveit_config/: README.md
src/ar4/ar4_moveit_config/config/: initial_positions.yaml  joint_limits.yaml
src/ar4/ar4_moveit_config/launch/: ar4_moveit.launch.py  demo.launch.py  setup_assistant.launch.py
src/ar4/docker/: Dockerfile.isaac  isaac_entrypoint.sh
src/ar4/tools/: README.md
src/jackal_ar4_description/: CMakeLists.txt
src/jackal_ar4_description/config/: jackal_ar4.urdf.xacro
src/jackal_ar4_description/launch/: README.md  display.launch.py  gazebo.launch.py  jackal_ar4.launch
src/jackal_ar4_description/urdf/: ar4_arm.urdf.xacro  jackal_ar4.ros2_control.xacro  jackal_ar4.urdf  jackal_ar4.urdf.xacro
src/jackal_ar4_goals/: package.xml  setup.py
src/jackal_ar4_goals/jackal_ar4_goals/: send_arm_goal.py  send_nav_goal.py
src/jackal_ar4_moveit_config/: CMakeLists.txt  package.xml
src/jackal_ar4_moveit_config/config/: jackal_ar4.srdf  joint_limits.yaml  ompl_planning.yaml
src/jackal_ar4_moveit_config/launch/: move_group.launch.py
src/jackal_ar4_navigation/: CMakeLists.txt
src/jackal_ar4_navigation/config/: nav2_params.yaml
