<?xml version="1.0"?>
<package format="3">
  <name>jackal_ar4_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt2 config for Jackal AR4</description>
  <maintainer email="maintainer@example.com">ROS2 Developer</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_navigation</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_setup_assistant</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>moveit_configs_utils</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>controller_manager</depend>
  <depend>xacro</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
