<?xml version="1.0"?>
<package format="3">
  <name>jackal_ar4_navigation</name>
  <version>0.0.0</version>
  <description>Navigation config for Jackal AR4</description>
  <maintainer email="maintainer@example.com">ROS2 Developer</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>nav2_mppi_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_lifecycle_manager</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
